--- a/getting-started/troubleshooting-validation/common-issues.mdx
+++ b/getting-started/troubleshooting-validation/common-issues.mdx
@@ -1,269 +1,237 @@
 ---
 title: "Troubleshooting Common Issues"
-description: "Address frequent installation and configuration pitfalls, such as build errors, linker problems, or environment misconfiguration, with actionable solutions."
+description: "Identify and resolve the most common setup and compilation problems encountered during initial integration. Includes tips for resolving dependency issues, path problems, and common build errors."
 ---
 
 # Troubleshooting Common Issues
 
-This guide addresses frequent installation and configuration challenges encountered when setting up GoogleTest and GoogleMock. It provides clear, actionable steps to resolve build errors, linker problems, environment misconfigurations, and common pitfalls, enabling you to confidently validate and stabilize your development environment.
+This guide helps you identify and resolve the most frequent problems encountered during initial setup and integration of GoogleTest and GoogleMock. Whether you face build failures, linking errors, unexpected test behavior, or warning messages, this document provides practical insights and best practices to get you back on track swiftly.
 
 ---
 
-## 1. Build Errors
+## 1. Common Build and Linking Issues
 
-### 1.1 C++ Compiler and Standard Compatibility
+### 1.1 Missing or Incorrect Dependencies
 
-- **Issue**: Compiler rejects code with errors related to C++17 features or GoogleTest constructs.
-- **Action**:
-  1. Verify your compiler supports **C++17** or a later standard.
-  2. Add the following flag to your build command:
-     ```bash
-     -std=c++17
-     ```
-  3. Ensure your compiler version is supported (GCC 7+, Clang 5+, MSVC 2017+).
+GoogleTest and GoogleMock depend on C++17 support and the proper inclusion of their headers and libraries.
 
-<Tip>
-Using outdated compilers is the most common cause of build failures. Check your compiler version with `gcc --version`, `clang --version`, or Visual Studio version.
-</Tip>
+- **Problem:** Compilation fails due to missing headers like `<gtest/gtest.h>` or `<gmock/gmock.h>`.
 
-### 1.2 Missing Include Paths
+  **Solution:**
 
-- **Issue**: Errors like `fatal error: 'gtest/gtest.h' file not found` or similar.
-- **Action**:
-  1. Confirm that the path to GoogleTest headers is added to your compiler’s include directories.
-  2. For CMake projects, add:
-     ```cmake
-     target_include_directories(your_target PRIVATE /path/to/googletest/include)
-     ```
-  3. For Bazel, ensure correct dependencies in your BUILD files.
+  - Verify that the GoogleTest source or installed package is correctly referenced in your build system (CMake, Bazel, or manual).
+  - Ensure include paths to GoogleTest and GoogleMock headers are accurate.
+  - For manual integration, confirm that you have the `googletest` clone or release files and that your compiler supports C++17.
 
-<Check>
-Without proper include paths, your build cannot find GoogleTest headers, causing compilation to fail.
-</Check>
+- **Problem:** Linking errors such as unresolved symbols from gtest or gmock.
 
-## 2. Linker Errors
+  **Solution:**
 
-### 2.1 Undefined References to GoogleTest or GoogleMock Symbols
+  - Confirm that your linker includes the GoogleTest and GoogleMock static or shared libraries.
+  - If using CMake, link your test targets with `gtest` and `gmock` libraries explicitly.
+  - For Bazel, ensure your BUILD files include the proper `deps` on GoogleTest.
+  - Verify architecture compatibility—i.e., no mixing of 32-bit and 64-bit binaries.
 
-- **Issue**: Linker errors referencing symbols like `testing::InitGoogleTest` or mock class methods.
-- **Action**:
-  1. Verify you are linking against the correct GoogleTest and GoogleMock libraries.
-  2. With CMake, link libraries like:
-     ```cmake
-     target_link_libraries(your_target PRIVATE gtest gmock)
-     ```
-  3. If using `-lgtest` or `-lgmock`, ensure the libraries are built and installed.
-  4. When using `gtest_main` or `gmock_main`, link accordingly to include the default `main()`.
+### 1.2 Compiler Compatibility
 
-<Tip>
-A common pitfall is failing to link `gmock` library when mock features are used.
-</Tip>
+- GoogleTest requires C++17 or later.
+- Supported compilers include recent versions of GCC, Clang, and MSVC.
 
-### 2.2 Namespace Conflicts or Multiple Definitions
+**Tip:** Run `g++ --version` or `clang++ --version` to check your compiler, and check the C++ standard flags used in your build (`-std=c++17`).
 
-- **Issue**: Errors about duplicate symbols or conflicts.
-- **Action**:
-  1. Ensure you are not linking both the static and shared versions of GoogleTest simultaneously.
-  2. Remove duplicate library references.
-  3. Check for mixing different versions of GoogleTest in your project or dependencies.
+### 1.3 Dealing with Overloaded Methods in Mocks
 
-<Warning>
-Mixing incompatible versions or mixing static and dynamic libraries may cause these errors.
-</Warning>
+- When mocking overloaded functions, explicitly specify the signature in `MOCK_METHOD` to avoid ambiguity.
+- Use `using Base::Method;` to bring hidden base-class overloads into scope.
 
-## 3. Environment & Configuration Issues
+```cpp
+class MockFoo : public Foo {
+ public:
+   using Foo::Add;  // Bring base class overloads
+   MOCK_METHOD(int, Add, (Element x), (override));
+};
+```
 
-### 3.1 Incorrect Initialization of GoogleTest
+### 1.4 Resolving Virtual Destructor Warnings
 
-- **Issue**: Tests do not run or behave unexpectedly.
-- **Action**:
-  1. Always call `::testing::InitGoogleTest(&argc, argv);` before running tests.
-  2. In the main function, use:
-     ```cpp
-     int main(int argc, char **argv) {
-       ::testing::InitGoogleTest(&argc, argv);
-       return RUN_ALL_TESTS();
-     }
-     ```
+- Always ensure the class you mock has a virtual destructor. Without it, mocking can cause heapcheck failures or leaks.
 
-<Check>
-Not initializing GoogleTest properly leads to missing tests or ignored command line flags.
-</Check>
+```cpp
+class Base {
+ public:
+   virtual ~Base() {}  // Must be virtual
+   ...
+};
+```
 
-### 3.2 Fatal Assertions in Non-void Functions
+### 1.5 Mocking Methods with Commas in Types
 
-- **Issue**: Compilation errors when using `ASSERT_*` or `FAIL()` in functions returning non-void.
-- **Action**:
-  1. Use `EXPECT_*` assertions in non-void functions to avoid compilation errors.
-  2. Alternatively, refactor code so fatal assertions only appear in `void` returning methods.
+- Wrap return or argument types containing commas in additional parentheses or create type aliases.
 
-### 3.3 Mismatched Macro Usage: TEST vs TEST_F
+```cpp
+// Problematic
+MOCK_METHOD(std::pair<int, bool>, GetPair, ()); // Won't compile
 
-- **Issue**: Compiler errors when mixing test fixture classes.
-- **Action**:
-  1. Use `TEST` macros for simple tests.
-  2. Use `TEST_F` macros when using test fixtures (classes derived from `::testing::Test`).
-  3. Make sure the test fixture class is defined before using it in `TEST_F`.
+// Solution 1
+MOCK_METHOD((std::pair<int, bool>), GetPair, ());
 
-<Tip>
-Use `TEST_F` only if your test needs a fixture; otherwise, `TEST` suffices.
-</Tip>
-
-## 4. Mocking Issues
-
-### 4.1 Mock Method Not Called or Expectations Not Met
-
-- **Issue**: Tests fail with messages indicating unmet expectations or unexpected calls.
-- **Action**:
-  1. Confirm that all `EXPECT_CALL` statements are set before exercising mock calls.
-  2. Verify that the argument matchers in `EXPECT_CALL` correctly match the call arguments.
-  3. Use the `--gmock_verbose=info` flag to get detailed tracing of mock calls and expectations.
-  4. If ignoring uninteresting calls, consider using `NiceMock` to suppress warnings.
-
-### 4.2 Warning: Uninteresting Mock Function Calls
-
-- **Issue**: Warnings about uninteresting calls even when you have `ON_CALL` default actions.
-- **Action**:
-  1. Understand that `ON_CALL` specifies default behaviors but does not set expectations.
-  2. Add an `EXPECT_CALL(mock, Method(_)).Times(AnyNumber())` if calls without explicit expectations are allowed.
-  3. Alternatively, use `NiceMock<MockClass>` to suppress such warnings.
-
-<Note>
-Ignoring uninteresting calls can mask bugs; use with care.
-</Note>
-
-### 4.3 Mocking Non-Virtual Methods
-
-- **Issue**: Mocking non-virtual methods leads to unexpected behavior or compile errors.
-- **Action**:
-  1. Use interface-based design to make methods virtual.
-  2. Alternatively, use template-based dependency injection for non-virtual methods (see gMock Cookbook).
-
-### 4.4 Mocking Overloaded Methods
-
-- **Issue**: Compiler errors or incorrect matching with overloaded methods.
-- **Action**:
-  1. Use explicit type matchers or `using` declarations to bring base class methods into scope.
-  2. For disambiguating const and non-const overloads, use `Const()` wrapper.
-
-### 4.5 Issues with Move-Only Types in Mocks
-
-- **Issue**: Mocking methods with `std::unique_ptr` or other move-only types causes errors.
-- **Action**:
-  1. Use lambdas in `WillOnce()` or `WillRepeatedly()` to return freshly constructed objects.
-  2. Avoid returning move-only objects multiple times with `Return(std::move(...))`.
-
-<Tip>
-Refer to the gMock Cookbook section on mocking methods with move-only types for patterns and best practices.
-</Tip>
-
-## 5. Test Execution and Runtime Issues
-
-### 5.1 Tests Not Running or Being Skipped
-
-- **Issue**: Tests do not execute or are silently skipped.
-- **Action**:
-  1. Verify your test registration - tests must be linked into the binary.
-  2. Check if test names or test suite names start with `DISABLED_`.
-  3. Ensure no typos in test macro arguments.
-  4. Confirm `RUN_ALL_TESTS()` is called in your `main()`.
-
-### 5.2 Death Tests Fail or Hang
-
-- **Issue**: Death tests do not behave as expected or cause hangs.
-- **Action**:
-  1. Use recommended naming conventions: test suites with death tests are named `*DeathTest`.
-  2. Use the appropriate death test style (`fast` vs `threadsafe`), settable via `GTEST_FLAG_SET(death_test_style, "threadsafe")`.
-  3. Avoid spawning threads before running death tests.
-
-### 5.3 Assertion Failures Difficult to Diagnose
-
-- **Issue**: Failure messages lack context or are hard to trace.
-- **Action**:
-  1. Use the `SCOPED_TRACE` macro to add context traces.
-  2. Run tests with `--gmock_verbose=info` and `--gtest_stack_trace_depth` to see detailed call and expectation trace.
-
-<Info>
-Using parameterized or typed tests could improve test clarity and reuse, reducing likelihood of confusing failures.
-</Info>
-
-## 6. Common Pitfalls and Best Practices
-
-### 6.1 Setting Expectations After Calls
-
-- **Issue**: Undefined behavior or unexpected failures.
-- **Action**:
-  Always set `EXPECT_CALL` expectations before calling the mock methods.
-
-### 6.2 Over-Specifying Expectations
-
-- **Issue**: Tests are brittle; break due to minor implementation changes.
-- **Action**:
-  1. Use `ON_CALL` to specify default mock behavior.
-  2. Use `EXPECT_CALL` sparingly, only to verify critical interactions.
-  3. Use `NiceMock` to suppress unnecessary warnings.
-
-### 6.3 Mixing Mock Strictness
-
-- **Issue**: Unexpected warnings or failures from uninteresting calls.
-- **Action**:
-  Choose between `NiceMock`, `NaggyMock`, and `StrictMock` according to your test needs.
-  - Use `NiceMock` to suppress uninteresting call warnings.
-  - Use `StrictMock` to fail on unexpected calls.
-  - Default mocks behave as `NaggyMock`.
-
-### 6.4 Memory Leaks with Mock Objects
-
-- **Issue**: Heap check failures when mocks are not deleted.
-- **Action**:
-  1. Use scoped mocks or ensure manual deletion of mocks.
-  2. Use `Mock::AllowLeak()` cautiously when leaks are intentional (e.g., in death tests).
-
-## 7. Additional Tools & Debugging Tips
-
-### 7.1 Using Verbose Flags
-
-- Run tests with:
-  ```
-  --gmock_verbose=info
-  ```
-  to see detailed mock call traces and expectation matches.
-
-### 7.2 Enabling Color Output
-
-- Use:
-  ```
-  --gtest_color=yes
-  ```
-  for clearer visual differentiation between test results.
-
-### 7.3 Inspecting Current Test Name
-
-- Use the GoogleTest API:
-  ```cpp
-  const testing::TestInfo* info =
-      testing::UnitTest::GetInstance()->current_test_info();
-  std::cout << "Currently running: " << info->test_suite_name()
-            << "." << info->name() << std::endl;
-  ```
-
-### 7.4 Using Event Listeners for Custom Output
-
-- Implement custom `TestEventListener`s to augment test output,
-  useful for CI integration or specialized logging.
+// Solution 2
+using PairType = std::pair<int, bool>;
+MOCK_METHOD(PairType, GetPair, ());
+```
 
 ---
 
-## 8. Where to Get Help
+## 2. Understanding gMock Warnings and Failures
 
-- Consult the following documentation pages for detailed guidance:
-  - [GoogleTest Primer](primer.md)
-  - [gMock for Dummies](gmock_for_dummies.md)
-  - [Mocking Reference](reference/mocking.md)
-  - [Assertions Reference](reference/assertions.md)
-  - [gMock Cookbook](gmock_cook_book.md)
-  - [Legacy gMock FAQ](gmock_faq.md)
+### 2.1 Uninteresting Mock Function Calls
 
-- Use the GoogleTest and GoogleMock issue trackers and community forums for reporting bugs and seeking support.
+If a mock function is called without an `EXPECT_CALL` specifying that call, gMock prints a warning:
+
+```text
+GMOCK WARNING: Uninteresting mock function call - returning default value.
+```
+
+- This is normal if you haven't set expectations for every call.
+- Use `NiceMock<MockClass>` to suppress these warnings when uninteresting calls are expected.
+- Alternatively, add an `EXPECT_CALL(mock, Method(_)).Times(AnyNumber())` to explicitly allow calls.
+
+### 2.2 Unexpected Calls
+
+An unexpected call occurs when a function is called that doesn't match any existing expectation.
+
+```text
+Unexpected mock function call - returning default value.
+```
+
+- This always indicates a test failure.
+- Ensure all expected calls have matching `EXPECT_CALL` statements with appropriate matchers.
+- Use `--gmock_verbose=info` to see detailed traces aiding diagnosis.
+
+### 2.3 Excessive Calls
+
+Calling a mock function more times than specified in the `Times()` clause leads to errors.
+
+- Adjust the `Times()` cardinality.
+- Consider using `.RetiresOnSaturation()` if needed (makes expectations retire after saturation).
+
+```cpp
+EXPECT_CALL(mock, Func()).Times(2).RetiresOnSaturation();
+```
+
+### 2.4 Unsatisfied Expectations
+
+Tests fail when an expected call is never invoked:
+
+```text
+Actual function call count doesn't match EXPECT_CALL(...)
+Expected: to be called once
+Actual: never called
+```
+
+- Verify your test covers all expected calls.
+- Use debugging output (`--gmock_verbose=info`) to understand call flow.
+
+### 2.5 Common Causes of Failures
+
+- Arguments mismatch — check your matchers.
+- Order of expectations when sequences or `After()` clauses are used.
+- Retired expectations no longer match calls, ensure careful use of `RetiresOnSaturation()`.
 
 ---
+
+## 3. Debugging and Diagnostic Tips
+
+### 3.1 Enable Verbose Logging
+
+Run tests with `--gmock_verbose=info` to get rich logs explaining which expectations match or fail each call. This often reveals subtle problems.
+
+### 3.2 Stack Traces in Failures
+
+GMock prints stack traces with warnings/failures, pointing to source lines where expectations are declared. Use these to trace issues quickly.
+
+### 3.3 Checking for Leaked Mocks
+
+Leaked mock objects (never deleted) cause final verification failures:
+
+```text
+ERROR: this mock object should be deleted but never is.
+```
+
+- Make sure all mocks you create on the heap are properly deleted.
+- If intentionally leaking, use `Mock::AllowLeak(&mock_obj);`.
+
+### 3.4 Use `Mock::VerifyAndClearExpectations()`
+
+Explicitly verify and clear expectations if mocks live longer or are managed by external code.
+
+```cpp
+ASSERT_TRUE(Mock::VerifyAndClearExpectations(&mock_obj));
+```
+
+### 3.5 Avoid Setting Expectations After Calls
+
+Always set expectations before exercising the code under test. Setting expectations afterward leads to undefined behavior.
+
+---
+
+## 4. Best Practices to Avoid Common Pitfalls
+
+- Use `ON_CALL` to set default behavior and `EXPECT_CALL` only for calls you want to verify.
+- For methods expected to be called any number of times, use `.Times(AnyNumber())` explicitly.
+- Use sequences (`InSequence`) or `After()` to enforce call order when it matters.
+- Use `NiceMock` or `StrictMock` to control how uninteresting calls are handled.
+- When mocking methods accepting move-only types (e.g., `std::unique_ptr`), define mocks normally and use lambdas in actions.
+
+```cpp
+EXPECT_CALL(mock, Method(_))
+  .WillRepeatedly([](std::unique_ptr<Foo> ptr) { ... });
+```
+
+- Avoid mocking concrete classes; prefer interfaces for easier maintainability.
+
+---
+
+## 5. Troubleshooting Quick Reference
+
+<AccordionGroup title="Common Issues & Solutions">
+<Accordion title="Compilation Errors Related to gMock Headers">
+- Check include paths.
+- Confirm GoogleTest source or installation.
+- Ensure using the correct C++ standard flag (`-std=c++17`).
+</Accordion>
+<Accordion title="Linker Errors Unresolved Symbols">
+- Link to `gtest` and `gmock` libraries.
+- Ensure consistent build architecture.
+- For manual builds, add `-lgtest -lgmock` (or equivalent).
+</Accordion>
+<Accordion title="Unexpected Mock Calls at Runtime">
+- Confirm all expected calls are covered by `EXPECT_CALL`.
+- Use `--gmock_verbose=info` to inspect mock call logs.
+- Check that arguments match the matchers specified.
+</Accordion>
+<Accordion title="Uninteresting Calls Warning">
+- Suppress with `NiceMock<MockClass>`.
+- Add catchall `EXPECT_CALL(mock, Method(_)).Times(AnyNumber())` if calls are expected but not verified.
+</Accordion>
+<Accordion title="Memory Leak Errors on Mocks">
+- Delete mock objects to trigger expectation verification.
+- Use heap checkers to find leaks.
+- Use `Mock::AllowLeak(mock_obj);` if intentional.
+</Accordion>
+</AccordionGroup>
+
+---
+
+## 6. Additional Resources
+
+- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) for advanced recipes.
+- [Mocking Reference](https://google.github.io/googletest/reference/mocking.html) for all mock APIs.
+- [gMock FAQ](https://google.github.io/googletest/gmock_faq.html) for common questions.
+- [Using GoogleMock Guide](https://google.github.io/googletest/gmock_for_dummies.html) for learning basics.
+- [Matchers Reference](https://google.github.io/googletest/reference/matchers.html) for argument matchers.
+- [Running Tests & Understanding Output](../getting-started/first-steps-with-tests/running-tests.md) for insights on interpreting logs.
+
+---
+
+By following this guide, you can quickly identify root causes of setup and test failures, enhance test stability, and leverage GoogleTest and GoogleMock features effectively to build robust C++ test suites.
