--- a/concepts/testing-architecture/xunit-model.mdx
+++ b/concepts/testing-architecture/xunit-model.mdx
@@ -1,169 +1,264 @@
 ---
-title: "xUnit Architecture Explained"
-description: "Understand how GoogleTest builds upon the established xUnit testing paradigm to structure tests, fixtures, and test cases in C++. Learn the philosophy behind test registration and execution, and how this shapes maintainable large-scale test suites."
+title: "xUnit Model and Test Discovery"
+description: "Explore GoogleTest’s implementation of the xUnit architecture: how test cases and fixtures are defined, discovered, and automatically executed. Learn how test registration works behind the scenes and what this means for designing scalable test suites."
 ---
 
-# xUnit Architecture Explained
+# xUnit Model and Test Discovery
 
-GoogleTest builds upon the well-established xUnit testing paradigm, sculpting a powerful and maintainable framework tailored for C++ testing. This guide elucidates the core concepts behind the xUnit architecture as implemented in GoogleTest, demystifying test fixtures, test registration, and execution flow to enable large-scale, maintainable test suites.
-
----
-
-## Understanding the xUnit Paradigm in GoogleTest
-
-At its heart, GoogleTest embraces the xUnit model: a standardized approach to organizing and running tests that has stood the test of time.
-
-### Key Components of the xUnit Architecture
-
-- **Test Cases (or Test Suites):** Logical groupings of related tests. In GoogleTest, these align with classes that inherit from `testing::Test`.
-- **Test Fixtures:** Setup and teardown scaffolds providing controlled environments for each test, handled by overriding `SetUp()` and `TearDown()` methods.
-- **Test Methods:** Individual test functions representing a particular behavior or scenario.
-- **Test Registration:** Automatic discovery and registration of tests via macros like `TEST` and `TEST_F`, enabling seamless execution.
-- **Test Runner:** The engine that orchestrates running tests, managing lifecycles, tracking results, and reporting.
-
-This structure fosters rigorous, isolated, and repeatable tests.
+GoogleTest implements a robust and scalable xUnit architecture that facilitates writing, organizing, discovering, and running test cases automatically. This page demystifies how GoogleTest represents test cases, fixtures, and parameterized tests internally and how the framework discovers and executes them seamlessly. Understanding these concepts empowers users to design maintainable and scalable test suites.
 
 ---
 
-## Test Fixtures and Their Role
+## 1. The xUnit Architecture in GoogleTest
 
-Fixtures provide the backbone for sharing common setup and cleanup across tests, ensuring consistency and reducing duplication.
+At its core, GoogleTest is built upon the xUnit testing architecture, a pattern widely adopted for unit testing. This architecture structures tests into:
 
-### How GoogleTest Uses Fixtures
+- **Test Fixtures** (test classes) that define the shared environment and setup for tests.
+- **Test Cases** or **Test Suites**—groups of related tests using common fixtures.
+- **Individual Tests**, defined as separate functions within these test suites.
 
-- Define a fixture class derived from `testing::Test` which encapsulates the shared environment.
-- Override `SetUp()` to initialize the environment before each test.
-- Override `TearDown()` to clean up after each test, preventing side effects.
-- Individual tests within the fixture access shared members and utilities.
+GoogleTest manages these elements dynamically, enabling:
 
-### Benefits
+- Independent and repeatable execution of tests.
+- Automatic discovery and registration of tests without manual enumeration.
+- Parameterized and type-parameterized tests for broad and flexible coverage.
 
-- Encapsulation of common setup logic.
-- Isolation between tests ensuring no shared state contamination.
-- Clear readability and maintainability, especially in large test suites.
+### Why the xUnit Model Matters to Users
 
----
-
-## Test Registration and Execution Flow
-
-GoogleTest simplifies the traditionally tedious process of registering tests through macros.
-
-### Registration via Macros
-
-- `TEST(TestSuiteName, TestName)` registers a standalone test function.
-- `TEST_F(FixtureClassName, TestName)` registers a test associated with a fixture class.
-
-Behind the scenes, these macros:
-
-- Define appropriate classes and methods following the xUnit model.
-- Automatically add test instances to a global registry.
-
-### Execution Flow
-
-1. **Discovery:** Test registry collects all tests defined in code.
-2. **Setup:** For each test, GoogleTest instantiates the test fixture.
-3. **Execution:** Runs the test method.
-4. **Teardown:** Cleans up the fixture instance.
-5. **Reporting:** Aggregates test results and outputs.
-
-This flow ensures tests are run in isolation and results are clearly reported.
+The xUnit model in GoogleTest ensures predictable, isolated test execution, which improves both reliability and debuggability. When tests fail, you can pinpoint the source quickly due to isolated fixtures and detailed reporting.
 
 ---
 
-## Philosophy Behind Test Registration and Execution
+## 2. Defining Test Fixtures and Test Cases
 
-- **Automatic Discovery:** Avoids manual lists or configuration, reducing friction for developers.
-- **Isolation:** Instantiating fixtures per test shields tests from mutual interference.
-- **Simplicity with Power:** Macros hide boilerplate while providing control through fixtures and assertions.
-- **Extensibility:** Test fixtures can be extended and composed for hierarchical and complex scenarios.
+GoogleTest expects tests to be organized into test fixtures—C++ classes deriving from `::testing::Test` or specialized variants like `TestWithParam<T>` for parameterized tests. You define fixtures with member variables and setup/teardown routines.
 
----
+Tests use fixtures to share this setup and are defined using macros such as `TEST_F` for fixture-based tests or `TEST_P` for parameterized variants.
 
-## How This Architecture Supports Maintainability and Scalability
-
-GoogleTest’s adherence to the xUnit pattern empowers developers to maintain large test suites gracefully:
-
-- **Modular Tests:** Using fixtures, tests are organized by behavior and need, supporting incremental growth.
-- **Reduced Boilerplate:** Automatic registration frees users from error-prone manual bookkeeping.
-- **Clear Structure:** Consistent naming and organization of tests aids navigation and quick understanding.
-- **Execution Control:** Facilities like test filters, parameterized tests, and typed tests feel natural in this architecture.
-
----
-
-## Example: A Simple xUnit Test Fixture in GoogleTest
-
+### Example: Simple Fixture With Tests
 ```cpp
-#include <gtest/gtest.h>
-
-// Define a fixture class
-class MathTest : public ::testing::Test {
+class MyTestFixture : public ::testing::Test {
  protected:
   void SetUp() override {
-    // Common setup for all tests
-    value_ = 42;
+    // initialization
   }
 
   void TearDown() override {
-    // Cleanup code
+    // cleanup
   }
 
-  int value_;
+  int shared_resource_;
 };
 
-// Define tests using the fixture
-TEST_F(MathTest, Addition) {
-  EXPECT_EQ(value_ + 1, 43);
+TEST_F(MyTestFixture, TestOne) {
+  EXPECT_EQ(shared_resource_, 42);
 }
 
-TEST_F(MathTest, Subtraction) {
-  EXPECT_EQ(value_ - 1, 41);
+TEST_F(MyTestFixture, TestTwo) {
+  EXPECT_TRUE(SomeCheck());
 }
 ```
 
-Each test is a method under the fixture `MathTest`, automatically registered and discovered.
+Each `TEST_F` will run independently with a new instance of `MyTestFixture`.
+
+### Test Suite and Fixture Identity
+
+In GoogleTest, a test fixture name and test suite name are synonymous. The fixture name defines the suite under which test functions belong. GoogleTest requires all tests in a suite to share the same fixture class.
 
 ---
 
-## Best Practices and Tips
+## 3. Parameterized Tests and Test Generation
 
-- Always ensure your fixture’s destructor is virtual to avoid undefined behavior.
-- Leverage fixture inheritance for shared behaviors across suites.
-- Use test registration macros consistently to benefit from automatic discovery.
-- Avoid global state contamination by leveraging fixture setup and teardown.
-- Use `SetUpTestSuite` and `TearDownTestSuite` static methods for once-per-suite setup when needed.
-- Prefer parameterized and typed tests for scalable coverage of input variations.
+GoogleTest extends the xUnit model by supporting *value-parameterized tests* (`TEST_P`) and associated `INSTANTIATE_TEST_SUITE_P`, allowing a single test logic to run across multiple parameters transparently.
+
+### Defining a Value-Parameterized Test:
+
+```cpp
+class FooTest : public ::testing::TestWithParam<int> {
+  // Setup and members
+};
+
+TEST_P(FooTest, WorksWithParam) {
+  int param = GetParam();
+  EXPECT_TRUE(DoSomething(param));
+}
+
+INSTANTIATE_TEST_SUITE_P(
+    RangeTests, FooTest,
+    ::testing::Range(1, 4)  // Will run tests with param 1, 2, 3
+);
+```
+
+### Behind the Scenes: Test Expansion and Registration
+
+- Upon GoogleTest initialization (`InitGoogleTest()`), all parameterized tests declared by `TEST_P` macros are registered but not yet instantiated.
+- When `INSTANTIATE_TEST_SUITE_P` is called, GoogleTest:
+  - Invokes the parameter generator (e.g., `Range()`, `Values()`, `Combine()`) to produce parameter sequences.
+  - Creates and registers concrete test instances for each parameter value (each acting like a separate test).
+- This deferred evaluation means test parameters are only generated once during initialization, ensuring reproducibility and isolation.
+
+### Parameter Generators
+
+GoogleTest provides several built-in parameter generators that create value sequences for parameterized tests:
+
+| Generator      | Behavior                                                 | Example                          |
+|----------------|----------------------------------------------------------|---------------------------------|
+| `Range`        | Sequential range of values `[start, end)` with optional step | `Range(0, 5, 2)` yields 0, 2, 4 |
+| `Values`       | List of enumerated values                                 | `Values(3, 5, 8)`                |
+| `ValuesIn`     | Values from containers or arrays                          | `ValuesIn(std::vector<int>{1,2,3})` |
+| `Bool`         | Produces false and true                                   | `Bool()`                        |
+| `Combine`      | Cartesian product of multiple generators producing tuples | `Combine(Values(1,2), Values('a','b'))` |
+| `ConvertGenerator` | Converts generated types via casting or a custom callable | Often used for custom parameter adaptions |
+
+### Example: Combine Generator
+
+```cpp
+INSTANTIATE_TEST_SUITE_P(
+    MyComboTests, MyTestSuite,
+    ::testing::Combine(::testing::Values(1, 2), ::testing::Values('a', 'b')));
+```
+
+This expands to four tests with parameters `(1, 'a')`, `(1, 'b')`, `(2, 'a')`, and `(2, 'b')`.
 
 ---
 
-## Troubleshooting Common Issues
+## 4. Test Registration and Execution Flow
 
-### Tests Not Discovered
+### Test Registration
 
-- Confirm you use `TEST` or `TEST_F` macros for defining tests.
-- Verify your test suite and test names follow naming conventions avoiding underscores at boundaries.
+- Test registration occurs at static initialization time when macros like `TEST`, `TEST_F`, or `TEST_P` are used.
+- Each test is represented by a `TestInfo` object containing metadata such as test suite name, test name, type and value parameters, source file, and line number.
+- All registered tests are collected within `TestSuite` objects that group tests by fixture.
 
-### Fixture `SetUp()` or `TearDown()` Not Called
+### Test Execution Process
 
-- Ensure methods are declared `override`.
-- Avoid calling fixture methods from constructors; use `SetUp()` instead.
+1. When `RUN_ALL_TESTS()` is invoked, GoogleTest prepares the environment and filters tests based on user-specified filters and sharding.
+2. The framework iterates over all applicable `TestSuite` instances.
+3. For each `TestSuite`, GoogleTest will:
+   - Call `SetUpTestSuite()` (optional user-defined; runs once before all tests in suite).
+   - Execute each registered `TestInfo` test:
+     - Create a new test fixture instance using the factory stored in `TestInfo`.
+     - Call `SetUp()` of the fixture.
+     - Run the test body.
+     - Call `TearDown()` of the fixture.
+     - Delete the fixture instance.
+   - Call `TearDownTestSuite()` (optional user-defined; runs once after all tests in suite).
 
-### Test Side Effects Between Tests
+### Outcome Reporting
 
-- Confirm that fixture teardown cleans up any mutable shared state.
-- Avoid static mutable state unless properly isolated.
-
-### Test Registration Failures
-
-- Avoid manual test registries; rely on provided macros.
-- Use include guards and ensure proper header inclusion.
+- Results of each test (pass, fail, skip) are recorded in `TestResult` objects attached to `TestInfo`.
+- Listeners subscribed to GoogleTest events receive notifications on test start, failures, and completion.
+- Support for detailed reporting includes XML/JSON output generation, console printing, and customizable event listeners.
 
 ---
 
-## Additional Resources
+## 5. Scalability and Extensibility in GoogleTest's xUnit Model
 
-- [GoogleTest Primer](https://google.github.io/googletest/primer.html) – for basic usage and concepts.
-- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) – mocking complements testing architecture.
-- [Test Case Construction](https://google.github.io/googletest/reference/gtest-core-apis.html#TestCase) – core API details.
-- [Test Structure and Discovery Guide](https://google.github.io/googletest/guides/core-testing-workflows/test-structure-and-discovery.html) – ensure your tests are well-organized and discovered.
+### Scalable Test Definitions
 
-By mastering the xUnit architecture as implemented by GoogleTest, you can write robust, scalable, and maintainable C++ tests that empower your development cycle and ensure software quality.
+- The use of parameterized tests avoids test duplication.
+- Abstract test suites (with deferred instantiation) enable library-style reusable test logic.
+- Type-parameterized tests (`TYPED_TEST`, `TYPED_TEST_SUITE`) support running the same suite over multiple types, useful for templates and generic programming.
+
+### Test Discovery
+
+- Tests are discovered automatically via static registration—no manual registration needed.
+- Filtering on test names, types, and parameters is natively supported.
+- Support for test sharding enables distributing tests across parallel runners.
+
+### Hooks and Extensions
+
+- Users can extend test suite behavior with `SetUpTestSuite()` and `TearDownTestSuite()` for expensive setup and teardown shared by all tests.
+- Global environments (`testing::Environment`) provide setup/teardown at the test program level.
+- Event listener API enables custom output, logging, or integration with external systems.
+
+---
+
+## 6. Visualizing the Relationships
+
+```mermaid
+graph TD
+  subgraph TestRunner
+    RunAllTests -->|Iterates| TestSuiteList[TestSuites]
+    TestSuiteList --> TestSuite1[TestSuite: FixtureClass]
+    TestSuiteList --> TestSuite2[TestSuite: FixtureClass]
+  end
+
+  subgraph TestSuite1
+    TestSuite1 --> Test1[TestInfo: Test1]
+    TestSuite1 --> Test2[TestInfo: Test2]
+  end
+
+  subgraph TestSuite2
+    TestSuite2 --> Test3[TestInfo: Test3]
+    TestSuite2 --> Test4[TestInfo: Test4]
+  end
+
+  subgraph TestExecution
+    Test1 --> Fixture1[TestFixture Instance]
+    Fixture1 --> RunSetUp
+    Fixture1 --> RunTestBody
+    Fixture1 --> RunTearDown
+
+    Test2 --> Fixture2[TestFixture Instance]
+
+    Test3 --> Fixture3[TestFixture Instance]
+    Test4 --> Fixture4[TestFixture Instance]
+  end
+
+  TestSuite1 -->|SetUpTestSuite / TearDownTestSuite| SuiteSetup[TestSuite Setup]
+  TestSuite2 --> SuiteSetup
+
+  subgraph ParameterizedTests
+    INSTANTIATE_TEST_SUITE_P --> ParamGenerator[Generator]
+    ParamGenerator --> MultipleTestInstances[TestInstances]
+  end
+
+  MultipleTestInstances -- Instantiates --> Test1
+  MultipleTestInstances -- Instantiates --> Test2
+
+  %% Style
+  classDef suite fill:#eef,stroke:#77f,stroke-width:1px;
+  class TestSuite1,TestSuite2 suite;
+```
+
+---
+
+## 7. Practical Tips for Users
+
+- **Always name your test suites and test names without underscores (`_`)** to avoid name collisions and registration conflicts.
+- **Use parameterized tests to avoid repetitious code** and increase test coverage efficiently.
+- **Define `SetUpTestSuite()` and `TearDownTestSuite()` for expensive shared resource management** instead of duplicating this in every test.
+- **Be mindful that tests are independent**: each test gets a fresh fixture instance; avoid dependencies between tests.
+- **Use the `INSTANTIATE_TEST_SUITE_P` only once per parameterized test suite** to avoid confusing multiple expansions.
+- **Provide custom parameter name generators when using complex parameter types** to make test output and filtering easier.
+
+---
+
+## 8. Troubleshooting Common Issues
+
+- **Tests not running?** Ensure parameterized tests (`TEST_P`) are properly instantiated with `INSTANTIATE_TEST_SUITE_P`.
+- **Fixture conflicts?** All tests in a test suite must share the same fixture class; mixing `TEST` and `TEST_F` in the same suite leads to runtime errors.
+- **Skipped tests?** Check if filtering or sharding configuration accidentally excludes tests.
+- **Test name conflicts?** Avoid underscores in test suite and test names.
+
+For more details, see [Test Discovery and Execution Guide](../guides/core_testing_workflows/test_discovery_execution.md).
+
+---
+
+## 9. Summary
+
+GoogleTest’s implementation of the xUnit architecture streamlines the process of defining, discovering, and running tests. Through fixtures, parameterized tests, and automatic registration, users can manage complex test suites with ease, leveraging built-in generators and extensibility points to tailor testing workflows for real-world scenarios. This model guarantees independent and reproducible tests, supports scalable test generation, and provides detailed reporting. Understanding this architecture is fundamental for harnessing GoogleTest’s full potential.
+
+---
+
+## See Also
+
+- [GoogleTest Primer](../primer.md) for beginner-friendly test writing
+- [Advanced Testing Patterns: Parameterized Tests](../advanced.md#value-parameterized-tests)
+- [Testing Reference: Core Macros](../api-reference/core-testing-api/test-case-definition.md)
+- [Test Discovery and Execution Guide](../guides/core_testing_workflows/test_discovery_execution.md)
+- [GoogleTest Architecture Overview](../overview/architecture-integration-usecases/architecture-overview.md)
+
+---
+
